# hackage-revdeps

./: CHANGELOG.md  LICENSE  README.md  hackage-revdeps.cabal
.github/workflows/: fourmolu.yml  haskell-ci.yml
app/: History.hs  Main.hs
src/Hackage/: RevDeps.hs
