cabal-version:   2.2
name:            hackage-revdeps
version:         0.1.1
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      andrew.lelechenko@gmail.com
author:          Bodigrim
tested-with:
    ghc ==9.12.2 ghc ==9.10.1 ghc ==9.8.4 ghc ==9.6.7 ghc ==9.4.8
    ghc ==9.2.8

synopsis:        List Hackage reverse dependencies
description:
    Command-line tool to list Hackage reverse dependencies.
    It is different from how Hackage itself tracks them:
    this tool accounts for all package components, including
    tests and benchmarks, and counts dependencies only
    across the latest releases. The approach is roughly
    equivalent to what <https://packdeps.haskellers.com> does.

category:        Development
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/Bodigrim/hackage-revdeps.git

flag cabal-syntax
    default: False

library
    exposed-modules:  Hackage.RevDeps
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall -Wunused-packages
    build-depends:
        alfred-margaret >=2.0 && <2.2,
        base >=4.16 && <5,
        bytestring <0.13,
        containers <0.9,
        filepath <1.6,
        tar <0.7,
        text >=2.0 && <2.2,
        time <1.15

    if flag(cabal-syntax)
        build-depends: Cabal-syntax >=3.8 && <3.15

    else
        build-depends: Cabal <3.7

executable hackage-revdeps
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Wunused-packages
    build-depends:
        base,
        ansi-terminal >=0.11.3 && <1.2,
        bytestring,
        cabal-install >=3.8 && <3.15,
        containers,
        filepath,
        hackage-revdeps,
        optparse-applicative >=0.16 && <0.19,
        time <1.15,
        Cabal-syntax >=3.8 && <3.15,
        Cabal >=3.8 && <3.15

executable hackage-revdeps-history
    main-is:          History.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Wunused-packages
    build-depends:
        base,
        ansi-terminal >=0.11.3 && <1.2,
        bytestring,
        cabal-install >=3.8 && <3.15,
        containers,
        filepath,
        hackage-revdeps,
        optparse-applicative >=0.16 && <0.19,
        time <1.15,
        Cabal-syntax >=3.8 && <3.15,
        Cabal >=3.8 && <3.15
